<resources>
    <string name="app_name">Ttc</string>
    <string name="company_short_name">明匠智能</string>
    <string name="company_all_name">上海明匠智能系统有限公司</string>
    <string name="version">Version: </string>
    <string name="can_not_find_version_name">未知版本</string>
    <string name="action_settings">设置</string>
    <string name="item_1">扫码确认</string>
    <string name="item_2">到货查询</string>
    <string name="item_3">生产领料</string>
    <string name="item_4">物料上线</string>
    <string name="item_5">物料下线</string>
    <string name="item_6">生产退库</string>
    <string name="item_7">生产入库</string>
    <string name="item_8">销售出库</string>
    <string name="item_9">生产上线</string>
    <string name="item_10">生产消耗</string>
    <string name="item_11">生产打包</string>
    <string name="item_12">增加物</string>
    <string name="item_13">增加物料</string>
    <string name="item_14">增加物料4</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_fragment_scan">扫码</string>
    <string name="arrival_detail">到货明细</string>
    <string name="not_arrival_detail">未到货明细</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">字段不能为空</string>
    <string name="batch_number">订单批次</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="no_check">未入库</string>
    <string name="checked">已入库</string>

    <string name="order_number">生产订单编号</string>
    <string name="production_number">生产的产品编号</string>
    <string name="material_number">消耗的原材料编号</string>
    <string name="product_batch">空壳上的批次号</string>
    <string name="sale_check_out_number">销售出库单号</string>
    <string name="scan_input">扫码输入</string>
    <string name="scan_success">扫码成功,上传信息?</string>
    <string name="barcode_info">条码信息: </string>

    <string name="tip">提示</string>
    <string name="get_success">获取成功！</string>
    <string name="get_fail">获取失败！</string>
    <string name="code">编号</string>
    <string name="name">名称</string>
    <string name="status">状态</string>
    <string name="number">数量</string>
    <string name="default_number">默认为整箱</string>
    <string name="barcode_is_empty">条码为空！！</string>
    <string name="refresh">刷新</string>
    <string name="container_code">箱号</string>
    <string name="please_input_container_code">请输入箱号</string>
    <string name="end_board_title">产线1打包看板</string>
    <string name="head_board_title">产线1上线看板</string>
    <string name="warehouse_board_title">仓库看板</string>
    <string name="office_board_title">办公室看板</string>
    <string name="current_material">当前物料</string>
    <string name="current_product">产品</string>
    <string name="line_number">线号</string>
    <string name="actual_number">实际打包数量: </string>
    <string name="plan_number">计划数量: </string>
    <string name="state">速度: </string>
    <string name="difference">差值: </string>
    <string name="bad_number">不良品数: </string>
    <string name="customer_model">客户机型: </string>
    <string name="code_container">箱号: </string>
    <string name="wlzd_code">物料编号:</string>
    <string name="bar_code">条码: </string>
    <string name="wlzd_name_EN">物料名称（英文）: </string>
    <string name="batch">批次: </string>
    <string name="actual_sum">数量: </string>
    <string name="wlzd_name">物料名称: </string>
    <string name="model">用于机型: </string>
    <string name="used_number">已用数量: </string>
    <string name="specification">规格型号: </string>
    <string name="arrive_date">到货日期: </string>
    <string name="time">时间</string>
    <string name="model1">机型</string>
    <string name="package_number">打包数量</string>
    <string name="plan_number1">计划数量</string>
    <string name="online_number">上线数量</string>
    <string name="material1">压缩机</string>
    <string name="material2">电磁阀</string>
    <string name="material3">风扇</string>
    <string name="material4">控制器</string>
    <string name="customer">客户</string>
    <string name="state1">速度</string>
    <string name="time_part">时间段</string>
    <string name="batch1">批次</string>

    <string name="workstation_no">工位编号:</string>
    <string name="hint_input_workstation_no">请输入工位编号</string>
    <string name="server_ip">服务器IP:</string>
    <string name="hint_input_server_ip">请输入服务器IP地址</string>
    <string name="capture_card_ip">采集卡IP:</string>
    <string name="hint_input_capture_card_ip">请输入采集卡IP地址</string>
    <string name="ntp_server">NTP服务器:</string>
    <string name="hint_input_ntp_server">NTP Server</string>
    <string name="system_setting">系统设置</string>
    <string name="save">保存</string>
    <string name="turn_back">返回</string>
    <string name="first_start_message">第一次启动</string>
    <string name="upper_set_tip">请输入完整，否则不能运行！</string>
    <string name="product_name">空调组装线</string>
    <string name="product_name_1">空调组装线一</string>
    <string name="product_name_2">空调组装线二</string>
    <string name="product_name_3">空调组装线三</string>
    <string name="product_name_4">空调组装线四</string>

</resources>
