<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:orientation="horizontal"
	android:gravity="center"
	android:padding="10dp"
	android:background="@color/red_light"
	android:layout_gravity="center">

	<TextView
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/line_number"
		/>


	<TextView
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/customer"
		/>

	<TextView
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/model1"
		/>

	<TextView
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/state1"
		/>

	<TextView
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/package_number"
		/>

	<TextView
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/plan_number1"
		/>

	<TextView
		android:id="@+id/online_number"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		style="@style/BoardTheme.MiddleTextView"
		android:text="@string/online_number"
		/>
</LinearLayout>