<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chart_blue_light"
    android:gravity="center">
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/rectangle_white_stroke"
        android:padding="20dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/workstation_no"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <EditText
                    style="@style/Theme.MJ.Default.EditText"
                    android:id="@+id/et_workstation_no"
                    android:hint="@string/hint_input_workstation_no"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    />
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <TextView android:text="@string/server_ip"
                    style="@style/Theme.MJ.Default.SettingTextView"
                    />
                <EditText
                    style="@style/Theme.MJ.Default.EditText"
                    android:id="@+id/et_server_ip"
                    android:hint="@string/hint_input_server_ip"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    />
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/btn_system_setting"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/system_setting" />
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
                <Button
                    android:id="@+id/btn_return"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_back"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>