<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_board"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_number"
                style="@style/BoardTheme.BigTextView"/>
            <TextView
                android:id="@+id/actual_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoardTheme.BigTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_number"
                style="@style/BoardTheme.BigTextView"/>
            <TextView
                android:id="@+id/plan_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoardTheme.BigTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                style="@style/BoardTheme.BigTextView"/>
            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoardTheme.BigTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difference"
                style="@style/BoardTheme.BigTextView"/>
            <TextView
                android:id="@+id/difference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoardTheme.BigTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_number"
                style="@style/BoardTheme.BigTextView"/>
            <TextView
                android:id="@+id/bad_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoardTheme.BigTextView"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>